# resemantica

./: .gitignore  AGENTS.md  ARCHITECT.md  DATA_CONTRACT.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  main.py  pyproject.toml  resemantica.toml
docs/: README.md
docs/00-foundation/: decision-rules.md  glossary-of-terms.md  hashing-protocol.md  system-overview.md
docs/10-architecture/: module-boundaries.md  runtime-lifecycle.md  storage-topology.md
docs/20-lld/: lld-00-config-logging-and-budgets.md  lld-00-db-foundation.md  lld-00-llm-client-and-prompts.md  lld-01-epub-roundtrip.md  lld-02-single-chapter-translation.md  lld-03-glossary.md  lld-04-summaries.md  lld-05-idioms.md  lld-05-packets.md  lld-06-graph-mvp.md  lld-07-orchestration-events.md  lld-07-world-model.md  lld-08-cli-and-tui.md  lld-08-packets.md  lld-08-tui-layout.md  lld-09-idioms.md  lld-09-pass3-and-risk.md  lld-10-orchestration-events.md  lld-10-packet-integration.md  lld-11-cleanup-details.md  lld-11-world-model.md  lld-12-cli-and-tui.md  lld-12-pass3-and-risk.md  lld-12-tui-layout.md  lld-13-cleanup-details.md  lld-13-observability.md  lld-14-observability.md  lld-14-pilot.md  lld-14a-graph-llm-drift.md  lld-14b-pilot.md  lld-15-orchestration-workflow.md  lld-15-pilot.md  lld-16-epub-reconstruction.md  lld-17-data-storage-contracts.md  lld-18-tui-and-events.md  lld-18b-non-story-chapter-detection.md  lld-18c-pass2-quality-guardrails.md  lld-18d-idiom-detect-translate-split.md  lld-18e-non-story-fixes.md  lld-19-tui-completion-and-smoke-validation.md  (+26 more)
docs/30-operations/: agent-workflow.md  artifact-paths.md  handover-next-session.md  kaizen-decisions.md  repo-map.md  smoke-task-21-reconstruction.md
tests/: conftest.py  test_cli_progress.py  test_logging_config.py  test_settings_models.py
(+229 files in other folders)
