[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemantica"
version = "0.1.0"
description = "Local-first EPUB translation pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ladybug>=0.15.3",
    "mlflow>=3.11.1",
    "openai>=2.32.0",
    "textual>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
