[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemantica"
version = "0.1.0"
description = "Local-first EPUB translation pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ebooklib>=0.18",
    "ladybug>=0.15.3",
    "loguru>=0.7.3",
    "lxml>=5.3",
    "mlflow>=3.11.1",
    "openai>=2.32.0",
    "rich>=13.9",
    "textual>=2.0.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
critic = [
    "sentence-transformers>=3.4.0",
]

[project.scripts]
rsem = "resemantica.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
